--- a/custom_langchain.ipynb
+++ b/custom_langchain.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +108,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Nice to meet you, Thanga! Is there something I can help you with or would you like to chat?', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 15, 'total_tokens': 39, 'completion_time': 0.02, 'prompt_time': 0.005940358, 'queue_time': 2.421241646, 'total_time': 0.025940358}, 'model_name': 'Llama3-8b-8192', 'system_fingerprint': 'fp_dadc9d6142', 'finish_reason': 'stop', 'logprobs': None}, id='run--19d6be60-6d3c-49a0-b513-466caf7eda79-0', usage_metadata={'input_tokens': 15, 'output_tokens': 24, 'total_tokens': 39})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llm.invoke(\"Hi I am thanga\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"This conversation just started, and you haven't informed me of anything yet. I'm happy to chat with you, though! What would you like to talk about?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 17, 'total_tokens': 51, 'completion_time': 0.028333333, 'prompt_time': 0.006705394, 'queue_time': 0.8729898199999999, 'total_time': 0.035038727}, 'model_name': 'Llama3-8b-8192', 'system_fingerprint': 'fp_179b0f92c9', 'finish_reason': 'stop', 'logprobs': None}, id='run--5a8f971e-9b03-42bf-a930-e4c19f500d15-0', usage_metadata={'input_tokens': 17, 'output_tokens': 34, 'total_tokens': 51})"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(\"what i just informed you? \")"
    ]
   }
  ],
