--- a/custom_langchain.ipynb
+++ b/custom_langchain.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +144,18 @@
    ],
    "source": [
     "llm.invoke(\"what i just informed you? \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Prompt Engineering\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
