--- a/custom_langchain.ipynb
+++ b/custom_langchain.ipynb
@@ -24,14 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')\n",
     "os.environ['GROQ_API_KEY'] = os.getenv('GROQ_API_KEY')\n",
     "os.environ['LANGCHAIN_API_KEY'] = os.getenv('LANGCHAIN_API_KEY')\n",
-    "os.environ['LANGCHAIN_PROJECT'] = os.getenv('LANGCHAIN_PROJECT')\n"
+    "os.environ['LANGCHAIN_PROJECT'] = os.getenv('LANGCHAIN_PROJECT')\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"]=\"true\"\n"
    ]
   },
   {
@@ -62,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatGroq(model=\"Llama3-8b-8192\")"
+    "llm = ChatGroq(model=\"Qwen-Qwq-32b\")"
    ]
   },
   {
@@ -128,22 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"This conversation just started, and you haven't informed me of anything yet. I'm happy to chat with you, though! What would you like to talk about?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 17, 'total_tokens': 51, 'completion_time': 0.028333333, 'prompt_time': 0.006705394, 'queue_time': 0.8729898199999999, 'total_time': 0.035038727}, 'model_name': 'Llama3-8b-8192', 'system_fingerprint': 'fp_179b0f92c9', 'finish_reason': 'stop', 'logprobs': None}, id='run--5a8f971e-9b03-42bf-a930-e4c19f500d15-0', usage_metadata={'input_tokens': 17, 'output_tokens': 34, 'total_tokens': 51})"
+       "AIMessage(content=\"\\n<think>\\nThe user is asking about my caching mechanism. I should guide him to check Qwen's official website.\\n</think>\\n\\nFor more information about me, please visit Qwen's official website.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 38, 'prompt_tokens': 17, 'total_tokens': 55, 'completion_time': 0.094613481, 'prompt_time': 0.006321196, 'queue_time': 1.423144762, 'total_time': 0.100934677}, 'model_name': 'Qwen-Qwq-32b', 'system_fingerprint': 'fp_512a3da6bb', 'finish_reason': 'stop', 'logprobs': None}, id='run--9e08ef06-9f6f-4286-9c36-974c7c17091e-0', usage_metadata={'input_tokens': 17, 'output_tokens': 38, 'total_tokens': 55})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm.invoke(\"what i just informed you? \")"
+    "llm.invoke(\"Do you have cache mechanism ?  \")"
    ]
   },
   {
